tests/compile-fail/Rule_9_5.rs
fn main() {
    let x: [i32] = [0, 1];
    //~^ ERROR mismatched types
}
